@@ -1,6 +1,7 @@
 package mesosphere.marathon
 package integration.setup
 
+import java.net.BindException
 import java.util.UUID
 import javax.inject.{ Inject, Named }
 import javax.ws.rs.core.Response
@@ -10,29 +11,28 @@ import akka.Done
 import akka.actor.ActorRef
 import com.google.common.util.concurrent.Service
 import com.google.inject._
+import com.typesafe.scalalogging.StrictLogging
+import kamon.Kamon
 import mesosphere.chaos.http.{ HttpConf, HttpModule, HttpService }
 import mesosphere.chaos.metrics.MetricsModule
 import mesosphere.marathon.api._
 import mesosphere.marathon.core.election.{ ElectionCandidate, ElectionService }
 import mesosphere.marathon.util.Lock
-import mesosphere.util.PortAllocator
+import mesosphere.util.{ CallerThreadExecutionContext, PortAllocator }
 import org.rogach.scallop.ScallopConf
-import org.slf4j.LoggerFactory
 
 import scala.collection.mutable.ArrayBuffer
-import scala.concurrent.{ Await, Promise }
+import scala.concurrent.{ Future, Promise }
 import scala.sys.process.{ Process, ProcessLogger }
-import scala.concurrent.duration._
 
 /**
   * Helper that starts/stops the forwarder classes as java processes specifically for the integration test
   * Basically, the tests need to bring up a minimum version of the http service with leader forwarding enabled.
   */
-class ForwarderService {
+class ForwarderService extends StrictLogging {
   private val children = Lock(ArrayBuffer.empty[Process])
   private val uuids = Lock(ArrayBuffer.empty[String])
 
-  val logger = LoggerFactory.getLogger(classOf[ForwarderService])
   def close(): Unit = {
     children(_.par.foreach(_.destroy()))
     children(_.clear())
@@ -43,38 +43,48 @@ class ForwarderService {
         case PIDRE(pid, mainClass, jvmArgs) if mainClass.contains(classOf[ForwarderService].getName) && jvmArgs.contains(id) => pid
       }
       if (pids.nonEmpty) {
-        Process(s"kill -9 ${pids.mkString(" ")}").!
+        Process(s"kill ${pids.mkString(" ")}").!
       }
     })
     uuids(_.clear())
   }
 
-  def startHelloApp(httpArg: String = "--http_port", args: Seq[String] = Nil): Int = {
+  def startHelloApp(httpArg: String = "--http_port", args: Seq[String] = Nil): Future[Int] = {
     val port = PortAllocator.ephemeralPort()
-    start(Nil, Seq("helloApp", httpArg, port.toString) ++ args)
-    port
+    start(Nil, Seq("helloApp", httpArg, port.toString) ++ args).map(_ => port)(CallerThreadExecutionContext.callerThreadExecutionContext)
   }
 
   def startForwarder(forwardTo: Int, httpArg: String = "--http_port", trustStorePath: Option[String] = None,
-    args: Seq[String] = Nil): Int = {
+    args: Seq[String] = Nil): Future[Int] = {
     val port = PortAllocator.ephemeralPort()
     val trustStoreArgs = trustStorePath.map { p => List(s"-Djavax.net.ssl.trustStore=$p") }.getOrElse(List.empty)
-    start(trustStoreArgs, Seq("forwarder", forwardTo.toString, httpArg, port.toString) ++ args)
-    port
+    start(trustStoreArgs, Seq("forwarder", forwardTo.toString, httpArg, port.toString) ++ args).map(_ => port)(CallerThreadExecutionContext.callerThreadExecutionContext)
   }
 
-  private def start(trustStore: Seq[String] = Nil, args: Seq[String] = Nil): Unit = {
+  private def start(trustStore: Seq[String] = Nil, args: Seq[String] = Nil): Future[Done] = {
+    logger.info(s"Starting forwarder '${args.mkString(" ")}'")
     val java = sys.props.get("java.home").fold("java")(_ + "/bin/java")
     val cp = sys.props.getOrElse("java.class.path", "target/classes")
     val uuid = UUID.randomUUID().toString
     uuids(_ += uuid)
-    val cmd = Seq(java, s"-DforwarderUuid:$uuid", "-classpath", cp) ++ trustStore ++ Seq("mesosphere.marathon.integration.setup.ForwarderService") ++ args
+    val cmd = Seq(java, "-Xms256m", "-XX:+UseConcMarkSweepGC", "-XX:ConcGCThreads=2",
+      // lower the memory pressure by limiting threads.
+      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-min=2",
+      "-Dakka.actor.default-dispatcher.fork-join-executor.factor=1",
+      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-max=4",
+      "-Dscala.concurrent.context.minThreads=2",
+      "-Dscala.concurrent.context.maxThreads=32",
+      s"-DforwarderUuid:$uuid", "-classpath", cp, "-Xmx256M", "-client") ++ trustStore ++ Seq("mesosphere.marathon.integration.setup.ForwarderService") ++ args
     val up = Promise[Done]()
     val log = new ProcessLogger {
       def checkUp(s: String) = {
         logger.info(s)
-        if (!up.isCompleted && s.contains("ServerConnector@")) {
-          up.trySuccess(Done)
+        if (!up.isCompleted) {
+          if (s.contains("Started ServerConnector@")) {
+            up.trySuccess(Done)
+          } else if (s.contains("java.net.BindException: Address already in use")) {
+            up.tryFailure(new BindException("Address already in use"))
+          }
         }
       }
       override def out(s: => String): Unit = checkUp(s)
@@ -84,13 +94,12 @@ class ForwarderService {
       override def buffer[T](f: => T): T = f
     }
     val process = Process(cmd).run(log)
-    Await.result(up.future, 30.seconds)
     children(_ += process)
+    up.future
   }
 }
 
-object ForwarderService {
-  private val log = LoggerFactory.getLogger(getClass)
+object ForwarderService extends StrictLogging {
   val className = {
     val withDollar = getClass.getName
     withDollar.substring(0, withDollar.length - 1)
@@ -111,19 +120,21 @@ object ForwarderService {
   }
 
   class LeaderInfoModule(elected: Boolean, leaderHostPort: Option[String]) extends AbstractModule {
-    log.info(s"Leader configuration: elected=$elected leaderHostPort=$leaderHostPort")
+    logger.info(s"Leader configuration: elected=$elected leaderHostPort=$leaderHostPort")
 
     override def configure(): Unit = {
       val leader = leaderHostPort
       val electionService = new ElectionService {
         override def isLeader: Boolean = elected
         override def leaderHostPort: Option[String] = leader
+        override def localHostPort: String = ???
 
         def offerLeadership(candidate: ElectionCandidate): Unit = ???
-        def abdicateLeadership(error: Boolean = false, reoffer: Boolean = false): Unit = ???
+        def abdicateLeadership(): Unit = ???
 
         override def subscribe(self: ActorRef): Unit = ???
         override def unsubscribe(self: ActorRef): Unit = ???
+        override def leadershipTransitionEvents = ???
       }
 
       bind(classOf[ElectionService]).toInstance(electionService)
@@ -150,11 +161,12 @@ object ForwarderService {
   class ForwarderConf(args: Seq[String]) extends ScallopConf(args) with HttpConf with LeaderProxyConf
 
   def main(args: Array[String]): Unit = {
-    val service = args(0) match {
-      case "helloApp" =>
-        createHelloApp(args.tail: _*)
-      case "forwarder" =>
-        createForwarder(forwardToPort = args(1).toInt, args.drop(2): _*)
+    Kamon.start()
+    val service = args.toList match {
+      case "helloApp" :: tail =>
+        createHelloApp(tail: _*)
+      case "forwarder" :: port :: tail =>
+        createForwarder(forwardToPort = port.toInt, tail: _*)
     }
     service.startAsync().awaitRunning()
     service.awaitTerminated()
@@ -162,13 +174,13 @@ object ForwarderService {
 
   private def createHelloApp(args: String*): Service = {
     val conf = createConf(args: _*)
-    log.info(s"Start hello app at ${conf.httpPort()}")
+    logger.info(s"Start hello app at ${conf.httpPort()}")
     startImpl(conf, new LeaderInfoModule(elected = true, leaderHostPort = None))
   }
 
   private def createForwarder(forwardToPort: Int, args: String*): Service = {
     val conf = createConf(args: _*)
-    log.info(s"Start forwarder on port  ${conf.httpPort()}, forwarding to $forwardToPort")
+    logger.info(s"Start forwarder on port ${conf.httpPort()}, forwarding to $forwardToPort")
     startImpl(conf, new LeaderInfoModule(elected = false, leaderHostPort = Some(s"localhost:$forwardToPort")))
   }
 
