@@ -1,37 +1,38 @@
 package mesosphere.marathon
 package integration.setup
 
+import com.typesafe.scalalogging.Logger
 import java.io.File
+import java.net.{ URLDecoder, URLEncoder }
 import java.nio.file.Files
 import java.util.UUID
 import java.util.concurrent.ConcurrentLinkedQueue
 
 import akka.Done
-import akka.actor.{ ActorSystem, Scheduler }
+import akka.actor.{ ActorSystem, Cancellable, Scheduler }
 import akka.http.scaladsl.Http
 import akka.http.scaladsl.client.RequestBuilding.Get
 import akka.http.scaladsl.model.{ HttpRequest, HttpResponse, StatusCodes }
 import akka.http.scaladsl.unmarshalling.FromRequestUnmarshaller
 import akka.stream.Materializer
+import akka.stream.scaladsl.Sink
 import com.fasterxml.jackson.databind.ObjectMapper
 import com.fasterxml.jackson.module.scala.DefaultScalaModule
 import com.fasterxml.jackson.module.scala.experimental.ScalaObjectMapper
 import com.typesafe.scalalogging.StrictLogging
+import mesosphere.AkkaUnitTestLike
 import mesosphere.marathon.api.RestResource
-import mesosphere.marathon.core.health.{ HealthCheck, MarathonHealthCheck, MarathonHttpHealthCheck, PortReference }
-import mesosphere.marathon.integration.facades.{ ITEnrichedTask, ITLeaderResult, MarathonFacade, MesosFacade }
-import mesosphere.marathon.raml.{ PodState, PodStatus, Resources }
-import mesosphere.marathon.state.{ AppDefinition, Container, DockerVolume, PathId }
-import mesosphere.marathon.test.ExitDisabledTest
-import mesosphere.marathon.util.{ Lock, Retry }
+import mesosphere.marathon.integration.facades._
+import mesosphere.marathon.raml.{ App, AppDockerVolume, AppHealthCheck, Network, NetworkMode, PodState, PodStatus, ReadMode }
+import mesosphere.marathon.state.PathId
+import mesosphere.marathon.util.{ Lock, Retry, Timeout }
 import mesosphere.util.PortAllocator
 import org.apache.commons.io.FileUtils
-import org.apache.mesos.Protos
-import org.scalatest.concurrent.PatienceConfiguration.Timeout
 import org.scalatest.concurrent.{ Eventually, ScalaFutures }
-import org.scalatest.time.{ Milliseconds, Span }
+import org.scalatest.exceptions.TestFailedDueToTimeoutException
+import org.scalatest.time.{ Milliseconds, Minutes, Seconds, Span }
 import org.scalatest.{ BeforeAndAfterAll, Suite }
-import play.api.libs.json.{ JsString, Json }
+import play.api.libs.json.{ JsObject, Json }
 
 import scala.annotation.tailrec
 import scala.async.Async.{ async, await }
@@ -40,6 +41,7 @@ import scala.concurrent.duration._
 import scala.concurrent.{ ExecutionContext, Future }
 import scala.sys.process.Process
 import scala.util.Try
+import scala.util.control.NonFatal
 
 /**
   * Runs a marathon server for the given test suite
@@ -57,10 +59,10 @@ case class LocalMarathon(
     zkUrl: String,
     conf: Map[String, String] = Map.empty,
     mainClass: String = "mesosphere.marathon.Main")(implicit
-  system: ActorSystem,
+    system: ActorSystem,
     mat: Materializer,
     ctx: ExecutionContext,
-    scheduler: Scheduler) extends AutoCloseable {
+    scheduler: Scheduler) extends AutoCloseable with StrictLogging {
 
   system.registerOnTermination(close())
 
@@ -91,15 +93,15 @@ case class LocalMarathon(
     "http_port" -> httpPort.toString,
     "zk" -> zkUrl,
     "zk_timeout" -> 20.seconds.toMillis.toString,
+    "zk_connection_timeout" -> 20.seconds.toMillis.toString,
     "zk_session_timeout" -> 20.seconds.toMillis.toString,
     "mesos_authentication_secret_file" -> s"$secretPath",
-    "event_subscriber" -> "http_callback",
     "access_control_allow_origin" -> "*",
     "reconciliation_initial_delay" -> 5.minutes.toMillis.toString,
     "min_revive_offers_interval" -> "100",
     "hostname" -> "localhost",
     "logging_level" -> "debug",
-    "minimum_viable_task_execution_duration" -> "0"
+    "offer_matching_timeout" -> 10.seconds.toMillis.toString // see https://github.com/mesosphere/marathon/issues/4920
   ) ++ conf
 
   val args = config.flatMap {
@@ -111,7 +113,7 @@ case class LocalMarathon(
       }
   }(collection.breakOut)
 
-  private var marathon = Option.empty[Process]
+  @volatile private var marathon = Option.empty[Process]
 
   if (autoStart) {
     start()
@@ -121,31 +123,40 @@ case class LocalMarathon(
   private lazy val processBuilder = {
     val java = sys.props.get("java.home").fold("java")(_ + "/bin/java")
     val cp = sys.props.getOrElse("java.class.path", "target/classes")
-    val memSettings = s"-Xmx${Runtime.getRuntime.maxMemory()}"
-    val cmd = Seq(java, memSettings, s"-DmarathonUUID=$uuid -DtestSuite=$suiteName", "-classpath", cp, mainClass) ++ args
+    val cmd = Seq(java, "-Xmx1024m", "-Xms256m", "-XX:+UseConcMarkSweepGC", "-XX:ConcGCThreads=2",
+      // lower the memory pressure by limiting threads.
+      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-min=2",
+      "-Dakka.actor.default-dispatcher.fork-join-executor.factor=1",
+      "-Dakka.actor.default-dispatcher.fork-join-executor.parallelism-max=4",
+      "-Dscala.concurrent.context.minThreads=2",
+      "-Dscala.concurrent.context.maxThreads=32",
+      s"-DmarathonUUID=$uuid -DtestSuite=$suiteName", "-classpath", cp, "-client", mainClass) ++ args
     Process(cmd, workDir, sys.env.toSeq: _*)
   }
 
-  private def create(): Process = {
-    processBuilder.run(ProcessOutputToLogStream(s"$suiteName-LocalMarathon-$httpPort"))
+  def create(): Process = {
+    marathon.getOrElse {
+      val process = processBuilder.run(ProcessOutputToLogStream(s"$suiteName-LocalMarathon-$httpPort"))
+      marathon = Some(process)
+      process
+    }
   }
 
   def start(): Future[Done] = {
-    if (marathon.isEmpty) {
-      marathon = Some(create())
-    }
+    create()
+
     val port = conf.get("http_port").orElse(conf.get("https_port")).map(_.toInt).getOrElse(httpPort)
-    val future = Retry(s"marathon-$port", maxAttempts = Int.MaxValue, minDelay = 1.milli, maxDelay = 5.seconds, maxDuration = 90.seconds) {
+    val future = Retry(s"Waiting for Marathon on $port", maxAttempts = Int.MaxValue, minDelay = 1.milli, maxDelay = 5.seconds, maxDuration = 4.minutes) {
       async {
-        val result = await(Http(system).singleRequest(Get(s"http://localhost:$port/v2/leader")))
+        val result = await(Http().singleRequest(Get(s"http://localhost:$port/v2/leader")))
+        result.discardEntityBytes() // forget about the body
         if (result.status.isSuccess()) { // linter:ignore //async/await
           Done
         } else {
-          throw new Exception("Marathon not ready yet.")
+          throw new Exception(s"Marathon on port=$port hasn't started yet. Giving up waiting..")
         }
       }
     }
-    future.onFailure { case _ => marathon = Option.empty[Process] }
     future
   }
 
@@ -159,13 +170,34 @@ case class LocalMarathon(
   def isRunning(): Boolean =
     activePids.nonEmpty
 
-  def stop(): Unit = {
-    marathon.foreach(_.destroy())
-    marathon = Option.empty[Process]
+  def exitValue(): Option[Int] = marathon.map(_.exitValue())
 
-    val pids = activePids
-    if (pids.nonEmpty) {
-      Process(s"kill -9 ${pids.mkString(" ")}").!
+  def stop(): Future[Done] = {
+    marathon.fold(Future.successful(Done)){ p =>
+      p.destroy()
+      Timeout.blocking(30.seconds){ p.exitValue(); Done }
+        .recover {
+          case NonFatal(e) =>
+            logger.warn(s"Could not shutdown Marathon $suiteName in time", e)
+            val pids = activePids
+            if (pids.nonEmpty) {
+              Process(s"kill -9 ${pids.mkString(" ")}").!
+            }
+            Done
+        }
+    }.andThen {
+      case _ =>
+        marathon = Option.empty[Process]
+    }
+  }
+
+  def restart(): Future[Done] = {
+    logger.info(s"Restarting Marathon on $httpPort")
+    async {
+      await(stop())
+      val x = await(start())
+      logger.info(s"Restarted Marathon on $httpPort")
+      x
     }
   }
 
@@ -175,26 +207,137 @@ case class LocalMarathon(
   }
 }
 
+trait HealthCheckEndpoint extends StrictLogging with ScalaFutures {
+
+  protected val healthChecks = Lock(mutable.ListBuffer.empty[IntegrationHealthCheck])
+  val registeredReadinessChecks = Lock(mutable.ListBuffer.empty[IntegrationReadinessCheck])
+
+  implicit val system: ActorSystem
+  implicit val mat: Materializer
+
+  /**
+    * Note! This is declared as lazy in order to prevent eager evaluation of values on which it depends
+    * We initialize it during the before hook and wait for Marathon to respond.
+    */
+  protected[setup] lazy val healthEndpoint = {
+    val route = {
+      import akka.http.scaladsl.server.Directives._
+      val mapper = new ObjectMapper() with ScalaObjectMapper
+      mapper.registerModule(DefaultScalaModule)
+
+      implicit val unmarshal = new FromRequestUnmarshaller[Map[String, Any]] {
+        override def apply(value: HttpRequest)(implicit ec: ExecutionContext, materializer: Materializer): Future[Map[String, Any]] = {
+          value.entity.toStrict(patienceConfig.timeout)(materializer).map { entity =>
+            mapper.readValue[Map[String, Any]](entity.data.utf8String)
+          }(ec)
+        }
+      }
+
+      get {
+        path(Segment / Segment / "health") { (uriEncodedAppId, versionId) =>
+          import PathId._
+          val appId = URLDecoder.decode(uriEncodedAppId, "UTF-8").toRootPath
+
+          def instance = healthChecks(_.find { c => c.appId == appId && c.versionId == versionId })
+
+          val state = instance.fold(true)(_.healthy)
+
+          logger.info(s"Received health check request: app=$appId, version=$versionId reply=$state")
+          if (state) {
+            complete(HttpResponse(status = StatusCodes.OK))
+          } else {
+            complete(HttpResponse(status = StatusCodes.InternalServerError))
+          }
+        } ~ path(Segment / Segment / Segment / "ready") { (uriEncodedAppId, versionId, taskId) =>
+          import PathId._
+          val appId = URLDecoder.decode(uriEncodedAppId, "UTF-8").toRootPath
+
+          // Find a fitting registred readiness check. If the check has no task id set we ignore it.
+          def check: Option[IntegrationReadinessCheck] = registeredReadinessChecks(_.find { c =>
+            c.appId == appId && c.versionId == versionId && c.taskId.fold(true)(_ == taskId)
+          })
+
+          // An app is not ready by default to avoid race conditions.
+          val isReady = check.fold(false)(_.call)
+
+          logger.info(s"Received readiness check request: app=$appId, version=$versionId taskId=$taskId reply=$isReady")
+
+          if (isReady) {
+            complete(HttpResponse(status = StatusCodes.OK))
+          } else {
+            complete(HttpResponse(status = StatusCodes.InternalServerError))
+          }
+        } ~ path(Remaining) { path =>
+          require(false, s"$path was unmatched!")
+          complete(HttpResponse(status = StatusCodes.InternalServerError))
+        }
+      }
+    }
+    val port = PortAllocator.ephemeralPort()
+    logger.info(s"Starting health check endpoint on port $port.")
+    val server = Http().bindAndHandle(route, "0.0.0.0", port).futureValue
+    logger.info(s"Listening for health events on $port")
+    server
+  }
+
+  /**
+    * Add an integration health check to internal health checks. The integration health check is used to control the
+    * health check replies for our app mock.
+    *
+    * @param appId The app id of the app mock
+    * @param versionId The version of the app mock
+    * @param state The initial health status of the app mock
+    * @return The IntegrationHealthCheck object which is used to control the replies.
+    */
+  def registerAppProxyHealthCheck(appId: PathId, versionId: String, state: Boolean): IntegrationHealthCheck = {
+    val check = new IntegrationHealthCheck(appId, versionId, state)
+    healthChecks { checks =>
+      checks.filter(c => c.appId == appId && c.versionId == versionId).foreach(checks -= _)
+      checks += check
+    }
+    check
+  }
+
+  /**
+    * Adds an integration readiness check to internal readiness checks. The behaviour is similar to integration health
+    * checks.
+    *
+    * @param appId The app id of the app mock
+    * @param versionId The version of the app mock
+    * @param taskId Optional task id to identify the task of the app mock.
+    * @return The IntegrationReadinessCheck object which is used to control replies.
+    */
+  def registerProxyReadinessCheck(appId: PathId, versionId: String, taskId: Option[String] = None): IntegrationReadinessCheck = {
+    val check = new IntegrationReadinessCheck(appId, versionId, taskId)
+    registeredReadinessChecks { checks =>
+      checks.filter(c => c.appId == appId && c.versionId == versionId && c.taskId == taskId).foreach(checks -= _)
+      checks += check
+    }
+    check
+  }
+}
+
 /**
-  * base trait that spins up/tears down a marathon and has all of the original tooling from
-  * SingleMarathonIntegrationTest.
+  * Base trait for tests that need a marathon
   */
-trait MarathonTest extends Suite with StrictLogging with ScalaFutures with BeforeAndAfterAll with Eventually {
+trait MarathonTest extends HealthCheckEndpoint with ScalaFutures with Eventually {
+  protected def logger: Logger
   def marathonUrl: String
   def marathon: MarathonFacade
+  def leadingMarathon: Future[LocalMarathon]
   def mesos: MesosFacade
   val testBasePath: PathId
-
-  protected val appProxyIds = Lock(mutable.ListBuffer.empty[String])
+  def suiteName: String
 
   implicit val system: ActorSystem
   implicit val mat: Materializer
   implicit val ctx: ExecutionContext
   implicit val scheduler: Scheduler
 
-  system.registerOnTermination(killAppProxies())
-
   case class CallbackEvent(eventType: String, info: Map[String, Any])
+  object CallbackEvent {
+    def apply(event: ITEvent): CallbackEvent = CallbackEvent(event.eventType, event.info)
+  }
 
   implicit class CallbackEventToStatusUpdateEvent(val event: CallbackEvent) {
     def taskStatus: String = event.info.get("taskStatus").map(_.toString).getOrElse("")
@@ -212,168 +355,84 @@ trait MarathonTest extends Suite with StrictLogging with ScalaFutures with Befor
     }
   }
 
-  protected val events = new ConcurrentLinkedQueue[CallbackEvent]()
-  protected val healthChecks = Lock(mutable.ListBuffer.empty[IntegrationHealthCheck])
-  protected[setup] lazy val callbackEndpoint = {
-    val route = {
-      import akka.http.scaladsl.server.Directives._
-      val mapper = new ObjectMapper() with ScalaObjectMapper
-      mapper.registerModule(DefaultScalaModule)
-
-      implicit val unmarshal = new FromRequestUnmarshaller[Map[String, Any]] {
-        override def apply(value: HttpRequest)(implicit ec: ExecutionContext, materializer: Materializer): Future[Map[String, Any]] = {
-          value.entity.toStrict(5.seconds)(materializer).map { entity =>
-            mapper.readValue[Map[String, Any]](entity.data.utf8String)
-          }(ec)
-        }
-      }
-
-      (post & entity(as[Map[String, Any]])) { event =>
-        val kind = event.get("eventType") match {
-          case Some(JsString(s)) => s
-          case Some(s) => s.toString
-          case None => "unknown"
-        }
-        logger.info(s"Received callback event: $kind with props $event")
-        events.add(CallbackEvent(kind, event))
-        complete(HttpResponse(status = StatusCodes.OK))
-      } ~ get {
-        path("health" / Segments) { uriPath =>
-          import PathId._
-          val (path, remaining) = uriPath.splitAt(uriPath.size - 2)
-          val (versionId, port) = (remaining.head, remaining.tail.head.toInt)
-          val appId = path.mkString("/").toRootPath
-          def instance = healthChecks(_.find { c => c.appId == appId && c.versionId == versionId && c.port == port })
-          def definition = healthChecks(_.find { c => c.appId == appId && c.versionId == versionId && c.port == 0 })
-          val state = instance.orElse(definition).fold(true)(_.healthy)
-          if (state) {
-            complete(HttpResponse(status = StatusCodes.OK))
-          } else {
-            complete(HttpResponse(status = StatusCodes.InternalServerError))
-          }
-        } ~ path(Remaining) { path =>
-          require(false, s"$path was unmatched!")
-          complete(HttpResponse(status = StatusCodes.InternalServerError))
-        }
-      }
-    }
-    val port = PortAllocator.ephemeralPort()
-    val server = Http().bindAndHandle(route, "localhost", port).futureValue
-    marathon.subscribe(s"http://localhost:$port")
-    logger.info(s"Listening for events on $port")
-    server
-  }
-
-  abstract override def afterAll(): Unit = {
-    Try(marathon.unsubscribe(s"http://localhost:${callbackEndpoint.localAddress.getPort}"))
-    Try(callbackEndpoint.unbind().futureValue)
-    Try(killAppProxies())
-    super.afterAll()
-  }
-
-  private def killAppProxies(): Unit = {
-    val PIDRE = """^\s*(\d+)\s+(.*)$""".r
-    val allJavaIds = Process("jps -lv").!!.split("\n")
-    val pids = allJavaIds.collect {
-      case PIDRE(pid, exec) if appProxyIds(_.exists(exec.contains)) => pid
-    }
-    if (pids.nonEmpty) {
-      Process(s"kill -9 ${pids.mkString(" ")}").run().exitValue()
-    }
-  }
+  protected val events = new ConcurrentLinkedQueue[ITSSEEvent]()
 
   implicit class PathIdTestHelper(path: String) {
     def toRootTestPath: PathId = testBasePath.append(path).canonicalPath()
     def toTestPath: PathId = testBasePath.append(path)
   }
 
-  val appProxyMainInvocationImpl: String = {
-    val javaExecutable = sys.props.get("java.home").fold("java")(_ + "/bin/java")
-    val classPath = sys.props.getOrElse("java.class.path", "target/classes").replaceAll(" ", "")
-    val main = classOf[AppMock].getName
-    val id = UUID.randomUUID.toString
-    appProxyIds(_ += id)
-    s"""$javaExecutable -Xmx64m -DappProxyId=$id -DtestSuite=$suiteName -classpath $classPath $main"""
+  /**
+    * Constructs the proper health proxy endpoint argument for the Python app mock.
+    *
+    * @param appId The app id whose health is checked
+    * @param versionId The version of the app
+    * @return URL to health check endpoint
+    */
+  def healthEndpointFor(appId: PathId, versionId: String): String = {
+    val encodedAppId = URLEncoder.encode(appId.toString, "UTF-8")
+    s"http://$$HOST:${healthEndpoint.localAddress.getPort}/$encodedAppId/$versionId"
   }
 
   def appProxyHealthCheck(
-    gracePeriod: FiniteDuration = 3.seconds,
+    gracePeriod: FiniteDuration = 1.seconds,
     interval: FiniteDuration = 1.second,
     maxConsecutiveFailures: Int = Int.MaxValue,
-    portIndex: Option[PortReference] = Some(PortReference.ByIndex(0))): MarathonHealthCheck =
-    MarathonHttpHealthCheck(gracePeriod = gracePeriod, interval = interval, maxConsecutiveFailures = maxConsecutiveFailures, portIndex = portIndex)
+    portIndex: Option[Int] = Some(0)): AppHealthCheck =
+    raml.AppHealthCheck(
+      gracePeriodSeconds = gracePeriod.toSeconds.toInt,
+      intervalSeconds = interval.toSeconds.toInt,
+      maxConsecutiveFailures = maxConsecutiveFailures,
+      portIndex = portIndex,
+      protocol = raml.AppHealthCheckProtocol.Http
+    )
 
-  def appProxy(appId: PathId, versionId: String, instances: Int, healthCheck: Option[HealthCheck] = Some(appProxyHealthCheck()), dependencies: Set[PathId] = Set.empty): AppDefinition = {
+  def appProxy(appId: PathId, versionId: String, instances: Int,
+    healthCheck: Option[raml.AppHealthCheck] = Some(appProxyHealthCheck()),
+    dependencies: Set[PathId] = Set.empty): App = {
 
-    val appProxyMainInvocation: String = {
-      val file = File.createTempFile("appProxy", ".sh")
-      file.deleteOnExit()
+    val projectDir = sys.props.getOrElse("user.dir", ".")
+    val appMock: File = new File(projectDir, "src/test/python/app_mock.py")
+    val cmd = Some(s"""echo APP PROXY $$MESOS_TASK_ID RUNNING; ${appMock.getAbsolutePath} """ +
+      s"""$$PORT0 $appId $versionId ${healthEndpointFor(appId, versionId)}""")
 
-      FileUtils.write(
-        file,
-        s"""#!/bin/sh
-            |set -x
-            |exec $appProxyMainInvocationImpl $$*""".stripMargin)
-      file.setExecutable(true)
-
-      file.getAbsolutePath
-    }
-    val cmd = Some(s"""echo APP PROXY $$MESOS_TASK_ID RUNNING; $appProxyMainInvocation """ +
-      s"""$$PORT0 $appId $versionId http://127.0.0.1:${callbackEndpoint.localAddress.getPort}/health$appId/$versionId""")
-
-    AppDefinition(
-      id = appId,
+    App(
+      id = appId.toString,
       cmd = cmd,
       executor = "//cmd",
       instances = instances,
-      resources = Resources(cpus = 0.5, mem = 128.0),
+      cpus = 0.01, mem = 32.0,
       healthChecks = healthCheck.toSet,
-      dependencies = dependencies
+      dependencies = dependencies.map(_.toString)
     )
   }
 
-  private def appProxyMainInvocationExternal(targetDir: String): String = {
+  def dockerAppProxy(appId: PathId, versionId: String, instances: Int, healthCheck: Option[AppHealthCheck] = Some(appProxyHealthCheck()), dependencies: Set[PathId] = Set.empty): App = {
     val projectDir = sys.props.getOrElse("user.dir", ".")
-    val homeDir = sys.props.getOrElse("user.home", "~")
-    val classPath = sys.props.getOrElse("java.class.path", "target/classes")
-      .replaceAll(" ", "")
-      .replace(s"$projectDir/target", s"$targetDir/target")
-      .replace(s"$homeDir/.ivy2", s"$targetDir/.ivy2")
-      .replace(s"$homeDir/.sbt", s"$targetDir/.sbt")
-    val id = UUID.randomUUID.toString
-    appProxyIds(_ += id)
-    val main = classOf[AppMock].getName
-    s"""java -Xmx64m -DappProxyId=$id -DtestSuite=$suiteName -classpath $classPath $main"""
-  }
-
-  def appProxyCommand(appId: PathId, versionId: String, containerDir: String, port: String) = {
-    val appProxy = appProxyMainInvocationExternal(containerDir)
-    s"""echo APP PROXY $$MESOS_TASK_ID RUNNING; $appProxy """ +
-      s"""$port $appId $versionId http://127.0.0.1:${callbackEndpoint.localAddress.getPort}/health$appId/$versionId"""
-  }
-
-  def dockerAppProxy(appId: PathId, versionId: String, instances: Int, healthCheck: Option[HealthCheck] = Some(appProxyHealthCheck()), dependencies: Set[PathId] = Set.empty): AppDefinition = {
-    val projectDir = sys.props.getOrElse("user.dir", ".")
-    val homeDir = sys.props.getOrElse("user.home", "~")
     val containerDir = "/opt/marathon"
 
-    val cmd = Some(appProxyCommand(appId, versionId, containerDir, "$PORT0"))
-    AppDefinition(
-      id = appId,
+    val encodedAppId = URLEncoder.encode(appId.toString, "UTF-8")
+    val cmd = Some("""echo APP PROXY $$MESOS_TASK_ID RUNNING; /opt/marathon/python/app_mock.py """ +
+      s"""$$PORT0 $appId $versionId ${healthEndpointFor(appId, versionId)}""")
+
+    App(
+      id = appId.toString,
       cmd = cmd,
-      container = Some(Container.Docker(
-        image = "openjdk:8-jre-alpine",
-        network = Some(Protos.ContainerInfo.DockerInfo.Network.HOST),
+      container = Some(raml.Container(
+        `type` = raml.EngineType.Docker,
+        docker = Some(raml.DockerContainer(
+          image = "python:3.4.6-alpine"
+        )),
         volumes = collection.immutable.Seq(
-          new DockerVolume(hostPath = s"$homeDir/.ivy2", containerPath = s"$containerDir/.ivy2", mode = Protos.Volume.Mode.RO),
-          new DockerVolume(hostPath = s"$homeDir/.sbt", containerPath = s"$containerDir/.sbt", mode = Protos.Volume.Mode.RO),
-          new DockerVolume(hostPath = s"$projectDir/target", containerPath = s"$containerDir/target", mode = Protos.Volume.Mode.RO)
+          new AppDockerVolume(hostPath = s"$projectDir/src/test/python", containerPath = s"$containerDir/python", mode = ReadMode.Ro)
         )
       )),
       instances = instances,
-      resources = Resources(cpus = 0.5, mem = 128.0),
+      cpus = 0.5,
+      mem = 128,
       healthChecks = healthCheck.toSet,
-      dependencies = dependencies
+      dependencies = dependencies.map(_.toString),
+      networks = Seq(Network(mode = NetworkMode.Host))
     )
   }
 
@@ -386,58 +445,45 @@ trait MarathonTest extends Suite with StrictLogging with ScalaFutures with Befor
     }
   }
 
-  def cleanUp(withSubscribers: Boolean = false): Unit = {
-    logger.info("Starting to CLEAN UP !!!!!!!!!!")
+  // We shouldn't eat exceptions in clenaUp() methods: it's a source of hard to find bugs if
+  // we just move on to the next test, that expects a "clean state". We should fail loud and
+  // proud here and find out why the clean-up fails.
+  def cleanUp(): Unit = {
+    logger.info(">>> Starting to CLEAN UP...")
+    events.clear()
 
-    try {
-      events.clear()
+    // Wait for a clean slate in Marathon, if there is a running deployment or a runSpec exists
+    logger.info("Clean Marathon State")
+    //do not fail here, since the require statements will ensure a correct setup and fail otherwise
+    Try(waitForDeployment(eventually(marathon.deleteGroup(testBasePath, force = true))))
 
-      // Wait for a clean slate in Marathon, if there is a running deployment or a runSpec exists
-      logger.info("Clean Marathon State")
-      lazy val group = marathon.group(testBasePath).value
-      lazy val deployments = marathon.listDeploymentsForBaseGroup().value
-      if (deployments.nonEmpty || group.transitiveRunSpecs.nonEmpty || group.transitiveGroupsById.nonEmpty) {
-        //do not fail here, since the require statements will ensure a correct setup and fail otherwise
-        Try(waitForDeployment(eventually(marathon.deleteGroup(testBasePath, force = true))))
+    val cleanUpPatienceConfig = WaitTestSupport.PatienceConfig(timeout = Span(1, Minutes), interval = Span(1, Seconds))
+
+    WaitTestSupport.waitUntil("clean slate in Mesos") {
+      val occupiedAgents = mesos.state.value.agents.filter { agent => agent.usedResources.nonEmpty || agent.reservedResourcesByRole.nonEmpty }
+      occupiedAgents.foreach { agent =>
+        import mesosphere.marathon.integration.facades.MesosFormats._
+        val usedResources: String = Json.prettyPrint(Json.toJson(agent.usedResources))
+        val reservedResources: String = Json.prettyPrint(Json.toJson(agent.reservedResourcesByRole))
+        logger.info(s"""Waiting for blank slate Mesos...\n "used_resources": "$usedResources"\n"reserved_resources": "$reservedResources"""")
       }
+      occupiedAgents.isEmpty
+    }(cleanUpPatienceConfig)
 
-      WaitTestSupport.waitUntil("clean slate in Mesos", patienceConfig.timeout.toMillis.millis) {
-        val occupiedAgents = mesos.state.value.agents.filter { agent => !agent.usedResources.isEmpty && agent.reservedResourcesByRole.nonEmpty }
-        occupiedAgents.foreach { agent =>
-          import mesosphere.marathon.integration.facades.MesosFormats._
-          val usedResources: String = Json.prettyPrint(Json.toJson(agent.usedResources))
-          val reservedResources: String = Json.prettyPrint(Json.toJson(agent.reservedResourcesByRole))
-          logger.info(s"""Waiting for blank slate Mesos...\n "used_resources": "$usedResources"\n"reserved_resources": "$reservedResources"""")
-        }
-        occupiedAgents.isEmpty
-      }
+    val apps = marathon.listAppsInBaseGroup
+    require(apps.value.isEmpty, s"apps weren't empty: ${apps.entityPrettyJsonString}")
+    val pods = marathon.listPodsInBaseGroup
+    require(pods.value.isEmpty, s"pods weren't empty: ${pods.entityPrettyJsonString}")
+    val groups = marathon.listGroupsInBaseGroup
+    require(groups.value.isEmpty, s"groups weren't empty: ${groups.entityPrettyJsonString}")
+    events.clear()
+    healthChecks(_.clear())
 
-      val apps = marathon.listAppsInBaseGroup
-      require(apps.value.isEmpty, s"apps weren't empty: ${apps.entityPrettyJsonString}")
-      val groups = marathon.listGroupsInBaseGroup
-      require(groups.value.isEmpty, s"groups weren't empty: ${groups.entityPrettyJsonString}")
-      events.clear()
-      healthChecks(_.clear())
-      killAppProxies()
-      if (withSubscribers) marathon.listSubscribers.value.urls.foreach(marathon.unsubscribe)
-    } catch {
-      case e: Throwable => logger.error("Clean up failed with", e)
-    }
-
-    logger.info("CLEAN UP finished !!!!!!!!!")
-  }
-
-  def appProxyCheck(appId: PathId, versionId: String, state: Boolean): IntegrationHealthCheck = {
-    val check = new IntegrationHealthCheck(appId, versionId, 0, state)
-    healthChecks { checks =>
-      checks.filter(c => c.appId == appId && c.versionId == versionId).foreach(checks -= _)
-      checks += check
-    }
-    check
+    logger.info("... CLEAN UP finished <<<")
   }
 
   def waitForHealthCheck(check: IntegrationHealthCheck, maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis) = {
-    WaitTestSupport.waitUntil("Health check to get queried", maxWait) { check.pinged }
+    WaitTestSupport.waitUntil("Health check to get queried", maxWait) { check.pinged.get }
   }
 
   def waitForDeploymentId(deploymentId: String, maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis): CallbackEvent = {
@@ -462,24 +508,107 @@ trait MarathonTest extends Suite with StrictLogging with ScalaFutures with Befor
     }
   }
 
+  /**
+    * Consumes the next event from the events queue within deadline. Does not throw. Returns None if unable to return an
+    * event by that time.
+    *
+    * @param deadline The time after which to stop attempting to get an event and return None
+    */
+  private def nextEvent(deadline: Deadline): Option[ITSSEEvent] = try {
+    eventually(timeout(Span(deadline.timeLeft.toMillis, Milliseconds))) {
+      val r = Option(events.poll)
+      if (r.isEmpty)
+        throw new NoSuchElementException
+      r
+    }
+  } catch {
+    case _: NoSuchElementException =>
+      None
+    case _: TestFailedDueToTimeoutException =>
+      None
+  }
+
+  /**
+    * Method waits for events and calls their callbacks independently of the events order. It receives a
+    * map of EventId -> Callback e.g.:
+    * Map("deployment_failed" -> _.id == deploymentId, "deployment_successful" -> _.id == rollbackId)),
+    * checks every event for it's existence in the map and if found, calls it's callback method. If successful, the entry
+    * is removed from the map. Returns if the map is empty.
+    */
+  def waitForEventsWith(
+    description: String,
+    eventsMap: Map[String, CallbackEvent => Boolean],
+    maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis) = {
+    val waitingFor = mutable.Map(eventsMap.toSeq: _*)
+    waitForEventMatching(description, maxWait) { event =>
+      if (waitingFor.get(event.eventType).fold(false)(fn => fn(event))) {
+        waitingFor -= event.eventType
+      }
+      waitingFor.isEmpty
+    }
+  }
+
+  /**
+    * Method waits for ANY (and only one) of the given events. It receives a map of EventId -> Callback e.g.:
+    * Map("deployment_failed" -> _.id == deploymentId, "deployment_successful" -> _.id == rollbackId)),
+    * and checks every incoming event for it's existence in the map and if found, calls it's callback method.
+    * Returns if event found and callback returns true.
+    */
+  def waitForAnyEventWith(
+    description: String,
+    eventsMap: Map[String, CallbackEvent => Boolean],
+    maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis) = {
+    val waitingForAny = mutable.Map(eventsMap.toSeq: _*)
+    waitForEventMatching(description, maxWait) { event =>
+      waitingForAny.get(event.eventType).fold(false)(fn => fn(event))
+    }
+  }
+
   def waitForEventMatching(
     description: String,
     maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis)(fn: CallbackEvent => Boolean): CallbackEvent = {
+    val deadline = maxWait.fromNow
     @tailrec
-    def matchingEvent: Option[CallbackEvent] = if (events.isEmpty) None else {
-      val event = events.poll()
-      if (fn(event)) {
-        Some(event)
-      } else {
-        logger.info(s"Event $event did not match criteria skipping to next event")
-        matchingEvent
+    def iter(): CallbackEvent = {
+      nextEvent(deadline) match {
+        case Some(ITConnected) =>
+          throw new MarathonTest.UnexpectedConnect
+        case Some(event: ITEvent) =>
+          val cbEvent = CallbackEvent(event)
+          if (fn(cbEvent)) {
+            cbEvent
+          } else {
+            logger.info(s"Event $event did not match criteria skipping to next event")
+            iter()
+          }
+        case None =>
+          throw new RuntimeException(s"No events matched <$description>")
       }
     }
+    iter()
+  }
 
-    eventually(timeout(Span(maxWait.toMillis, Milliseconds))) {
-      require(!events.isEmpty, s"No events matched <$description>")
-      matchingEvent.getOrElse(throw new RuntimeException("No matching events"))
+  /**
+    * Blocks until a single connected event is consumed. Discards any events up to that point.
+    *
+    * Not reasoning about SSE connection state will lead to flaky tests. If a master is killed, you should wait for the
+    * SSE stream to reconnect before doing anything else, or you could miss events.
+    */
+  def waitForSSEConnect(maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis): Unit = {
+    @tailrec
+    val deadline = maxWait.fromNow
+    def iter(): Unit = {
+      nextEvent(deadline) match {
+        case Some(event: ITEvent) =>
+          logger.info(s"Event ${event} was not a connected event; skipping")
+          iter()
+        case Some(ITConnected) =>
+          logger.info("ITConnected event consumed")
+        case None =>
+          throw new RuntimeException("No connected events")
+      }
     }
+    iter()
   }
 
   /**
@@ -513,6 +642,7 @@ trait MarathonTest extends Suite with StrictLogging with ScalaFutures with Befor
   }
 
   def waitForDeployment(change: RestResult[_], maxWait: FiniteDuration = patienceConfig.timeout.toMillis.millis): CallbackEvent = {
+    require(change.success, s"Deployment request has not been successful. httpCode=${change.code} body=${change.entityString}")
     val deploymentId = change.originalResponse.headers.find(_.name == RestResource.DeploymentHeader).getOrElse(throw new IllegalArgumentException("No deployment id found in Http Header"))
     waitForDeploymentId(deploymentId.value, maxWait)
   }
@@ -522,19 +652,151 @@ trait MarathonTest extends Suite with StrictLogging with ScalaFutures with Befor
       Try(marathon.status(podId)).map(_.value).toOption.filter(_.status == PodState.Stable).get
     }
   }
+
+  protected[setup] def teardown(): Unit = {
+    Try {
+      val frameworkId = marathon.info.entityJson.as[JsObject].value("frameworkId").as[String]
+      mesos.teardown(frameworkId).futureValue
+    }
+    Try(healthEndpoint.unbind().futureValue)
+  }
+
+  /**
+    * Connects repeatedly to the Marathon SSE endpoint until cancelled.
+    * Yields each event in order.
+    */
+  def startEventSubscriber(): Cancellable = {
+    @volatile var cancelled = false
+    def iter(): Unit = {
+      import akka.stream.scaladsl.Source
+      logger.info("SSEStream: Connecting")
+      Source.fromFuture(leadingMarathon)
+        .mapAsync(1) { leader =>
+          async {
+            logger.info(s"SSEStream: Acquiring connection to ${leader.url}")
+            val stream = await(leader.client.events())
+            logger.info(s"SSEStream: Connection acquired to ${leader.url}")
+
+            /* A potentially impossible edge case exists in which we query the leader, and then before we get a connection
+             * to that instance, it restarts and is no longer a leader.
+             *
+             * By checking the leader again once obtaining a connection to the SSE event stream, we have conclusive proof
+             * that we are consuming from the current leader, and we keep our connected events as deterministic as
+             * possible. */
+            val leaderAfterConnection = await(leadingMarathon)
+            logger.info(s"SSEStream: ${leader.url} is the leader")
+            if (leader != leaderAfterConnection) {
+              stream.runWith(Sink.cancelled)
+              throw new RuntimeException("Leader status changed since first connecting to stream")
+            } else {
+              stream
+            }
+          }
+        }
+        .flatMapConcat { stream =>
+          // We prepend the ITConnected event here in order to avoid emitting an ITConnected event on failed connections
+          stream.prepend(Source.single(ITConnected))
+        }
+        .runForeach { e: ITSSEEvent =>
+          e match {
+            case ITConnected =>
+              logger.info(s"SSEStream: Connected")
+            case event: ITEvent =>
+              logger.info(s"SSEStream: Received callback event: ${event.eventType} with props ${event.info}")
+          }
+          events.offer(e)
+        }
+        .onComplete {
+          case result =>
+            if (!cancelled) {
+              logger.info(s"SSEStream: Leader event stream was closed reason: ${result}")
+              logger.info("Reconnecting")
+              /* There is a small window between Jetty hanging up the event stream, and Jetty not accepting and
+               * responding to new requests. In the tests, under heavy load, retrying within 15 milliseconds is enough
+               * to hit this window.
+               *
+               * 10 times the interval would probably suffice. Timeout is way more time then we need. Half timeout seems
+               * like an okay compromise.
+               */
+              scheduler.scheduleOnce(patienceConfig.timeout / 2) { iter() }
+            }
+        }
+    }
+    iter()
+    new Cancellable {
+      override def cancel(): Boolean = {
+        cancelled = true
+        true
+      }
+      override def isCancelled: Boolean = cancelled
+    }
+  }
+}
+
+object MarathonTest extends StrictLogging {
+  class UnexpectedConnect extends Exception("Received an unexpected SSE event stream Connection event. This is " +
+    "considered an exception because not thinking about re-connection events properly can lead to race conditions in " +
+    "the tests. You should call waitForSSEConnect() after killing a Marathon leader to ensure no events are dropped.")
+}
+
+/**
+  * Fixture that can be used for a single test case.
+  */
+trait MarathonFixture extends AkkaUnitTestLike with MesosClusterTest with ZookeeperServerTest {
+  protected def logger: Logger
+  def withMarathon[T](suiteName: String, marathonArgs: Map[String, String] = Map.empty)(f: (LocalMarathon, MarathonTest) => T): T = {
+    val marathonServer = LocalMarathon(autoStart = false, suiteName = suiteName, masterUrl = mesosMasterUrl,
+      zkUrl = s"zk://${zkServer.connectUri}/marathon-$suiteName", conf = marathonArgs)
+    marathonServer.start().futureValue
+
+    val marathonTest = new MarathonTest {
+      override protected val logger: Logger = MarathonFixture.this.logger
+      override def marathonUrl: String = s"http://localhost:${marathonServer.httpPort}"
+      override def marathon: MarathonFacade = marathonServer.client
+      override def mesos: MesosFacade = MarathonFixture.this.mesos
+      override val testBasePath: PathId = PathId("/")
+      override implicit val system: ActorSystem = MarathonFixture.this.system
+      override implicit val mat: Materializer = MarathonFixture.this.mat
+      override implicit val ctx: ExecutionContext = MarathonFixture.this.ctx
+      override implicit val scheduler: Scheduler = MarathonFixture.this.scheduler
+      override val suiteName: String = MarathonFixture.this.suiteName
+      override implicit def patienceConfig: PatienceConfig = PatienceConfig(MarathonFixture.this.patienceConfig.timeout, MarathonFixture.this.patienceConfig.interval)
+      override def leadingMarathon = Future.successful(marathonServer)
+    }
+    val sseStream = marathonTest.startEventSubscriber()
+    try {
+      marathonTest.healthEndpoint
+      marathonTest.waitForSSEConnect()
+      f(marathonServer, marathonTest)
+    } finally {
+      sseStream.cancel()
+      if (marathonServer.isRunning()) marathonTest.cleanUp()
+      marathonTest.teardown()
+      marathonServer.stop()
+    }
+  }
+}
+
+object MarathonFixture extends MarathonFixture
+
+/**
+  * base trait that spins up/tears down a marathon and has all of the original tooling from
+  * SingleMarathonIntegrationTest.
+  */
+trait MarathonSuite extends Suite with StrictLogging with ScalaFutures with BeforeAndAfterAll with Eventually with MarathonTest {
+  abstract override def afterAll(): Unit = {
+    teardown()
+    super.afterAll()
+  }
 }
 
 /**
   * Base trait that starts a local marathon but doesn't have mesos/zookeeper yet
   */
-trait LocalMarathonTest
-    extends ExitDisabledTest
-    with MarathonTest
-    with ScalaFutures {
+trait LocalMarathonTest extends MarathonTest with ScalaFutures
+  with AkkaUnitTestLike with MesosTest with ZookeeperServerTest {
 
-  this: MesosTest with ZookeeperServerTest =>
-
-  val marathonArgs = Map.empty[String, String]
+  def marathonArgs: Map[String, String] = Map.empty
 
   lazy val marathonServer = LocalMarathon(autoStart = false, suiteName = suiteName, masterUrl = mesosMasterUrl,
     zkUrl = s"zk://${zkServer.connectUri}/marathon",
@@ -545,32 +807,49 @@ trait LocalMarathonTest
   lazy val marathon = marathonServer.client
   lazy val appMock: AppMockFacade = new AppMockFacade()
 
+  /**
+    * Return the current leading Marathon
+    * Expected to retry for a significant period of time until succeeds
+    */
+  override def leadingMarathon: Future[LocalMarathon] =
+    Future.successful(marathonServer)
+
+  @volatile private var sseStream: Option[Cancellable] = None
+
   abstract override def beforeAll(): Unit = {
     super.beforeAll()
-    marathonServer.start().futureValue(Timeout(90.seconds))
-    callbackEndpoint
+    marathonServer.start().futureValue
+    sseStream = Some(startEventSubscriber())
+    waitForSSEConnect()
   }
 
   abstract override def afterAll(): Unit = {
+    sseStream.foreach(_.cancel)
+    teardown()
     Try(marathonServer.close())
     super.afterAll()
   }
 }
 
 /**
-  * trait that has marathon, zk, and a local mesos ready to go
+  * trait that has marathon, zk, and a mesos ready to go
   */
-trait EmbeddedMarathonTest extends Suite with StrictLogging with ZookeeperServerTest with MesosLocalTest with LocalMarathonTest
+trait EmbeddedMarathonTest extends Suite with StrictLogging with ZookeeperServerTest with MesosClusterTest with LocalMarathonTest {
+  /* disable failover timeout to assist with cleanup ops; terminated marathons are immediately removed from mesos's
+   * list of frameworks
+   *
+   * Until https://issues.apache.org/jira/browse/MESOS-8171 is resolved, we cannot set this value to 0.
+   */
+
+  override def marathonArgs: Map[String, String] = Map("failover_timeout" -> "1")
+}
 
 /**
-  * trait that has marathon, zk, and a mesos cluster ready to go
+  * Trait that has a Marathon cluster, zk, and Mesos via mesos-local ready to go.
+  *
+  * It provides multiple Marathon instances. This allows e.g. leadership rotation.
   */
-trait EmbeddedMarathonMesosClusterTest extends Suite with StrictLogging with ZookeeperServerTest with MesosClusterTest with LocalMarathonTest
-
-/**
-  * trait that has a marathon cluster, zk, and mesos ready to go
-  */
-trait MarathonClusterTest extends Suite with StrictLogging with ZookeeperServerTest with MesosLocalTest with LocalMarathonTest {
+trait MarathonClusterTest extends Suite with StrictLogging with ZookeeperServerTest with MesosClusterTest with LocalMarathonTest {
   val numAdditionalMarathons = 2
   lazy val additionalMarathons = 0.until(numAdditionalMarathons).map { _ =>
     LocalMarathon(autoStart = false, suiteName = suiteName, masterUrl = mesosMasterUrl,
@@ -578,10 +857,20 @@ trait MarathonClusterTest extends Suite with StrictLogging with ZookeeperServerT
       conf = marathonArgs)
   }
   lazy val marathonFacades = marathon +: additionalMarathons.map(_.client)
+  lazy val allMarathonServers = marathonServer +: additionalMarathons
+
+  override def leadingMarathon: Future[LocalMarathon] = {
+    val leader = Retry("querying leader", maxAttempts = 50, maxDelay = 1.second, maxDuration = patienceConfig.timeout) {
+      Future.firstCompletedOf(marathonFacades.map(_.leaderAsync()))
+    }
+    leader.map { leader =>
+      allMarathonServers.find { _.httpPort == leader.value.port }.head
+    }
+  }
 
   override def beforeAll(): Unit = {
     super.beforeAll()
-    Future.sequence(additionalMarathons.map(_.start())).futureValue(Timeout(60.seconds))
+    Future.sequence(additionalMarathons.map(_.start())).futureValue
   }
 
   override def afterAll(): Unit = {
@@ -590,6 +879,12 @@ trait MarathonClusterTest extends Suite with StrictLogging with ZookeeperServerT
   }
 
   def nonLeader(leader: ITLeaderResult): MarathonFacade = {
-    marathonFacades.find(!_.url.contains(leader.port)).get
+    marathonFacades.find(!_.url.contains(leader.port.toString)).get
+  }
+
+  override def cleanUp(): Unit = {
+    Future.sequence(marathonServer.start() +: additionalMarathons.map(_.start())).futureValue
+    super.cleanUp()
   }
 }
+
